fix bug list-berita and add overflow-y in list-berita

--- a/assets/css/list-berita.css
+++ b/assets/css/list-berita.css
@@ -15,6 +15,8 @@
   border: 3px solid var(--main-color);
   padding: 2rem;
   border-radius: 10px;
+  height: 70vh;
+  overflow-y: auto;
 }
 
 .berita-card {
